syntax = "proto3";
option java_multiple_files = true;
option java_package = "cdTP1";

package forum;

// The Chat service definition.
service ManagerToService {
    rpc registerService(Service) returns (Service);
}

message Service {
    string ip = 1;
    int32 port = 2;
}

message ServiceList{
    repeated Service as = 1;
}